Fix menu alignment in IE11; `left: unset` isn't valid there.

--- a/source/css/components/_navigation.scss
+++ b/source/css/components/_navigation.scss
@@ -220,7 +220,6 @@ $__link_indentation: 28px; // indentation to have links and icons be a bit consi
 .menu {
   position: absolute;
   top: $__nav-height;
-  left: -50px;
   width: fit-content;
   min-width: 550px;
   z-index: 1000;
@@ -242,15 +241,16 @@ $__link_indentation: 28px; // indentation to have links and icons be a bit consi
     display: block;
   }
 
-  // Have the 2nd to last menu have a right-start that doesn't go out of view.
-  li:nth-last-child(2) [aria-haspopup] ~ & {
-    left: unset;
-    right: -150px;
+  li:first-child [aria-haspopup] ~ & {
+    left: -50px;
+  }
+
+  li:nth-child(2) [aria-haspopup] ~ & {
+    left: -125px;
   }
 
   // Have the last menu have a right-start that doesn't go out of view.  Test this in
   li:last-child [aria-haspopup] ~ & {
-    left: unset;
     right: -200px;
   }
 
